v1.2.0 10/08/12
================
- Support for windows images
- Snapshot support
- Standarize reports and command line arguments
  - addresses
  - flavors
  - keypairs
  - security groups
  - servers
  - object store commands

v1.1.0 09/06/12
================
- Support for multiple account files
  - account:list lists accounts and shows account settings
  - account:update modify accounts settings
  - account:remove remove accounts
  - account:use command makes the specified account default
  - account:copy command copies an account file
  - The -a option was added to commands to select an account
- Clean up of configuration
  - Changed the config:set command to take name value pairs
  - Added config:list command to print current configuration
- Changed the cdn:containers -a option to -l for long listing
- Used better mime type detection system
- Fixed 1.8.7 compatibility issues

v1.0.1 08/28/12
================
- Fix the ruby-progressbar gem dependency to version 0.0.10 to remove deprecation message.

v1.0.0 08/20/12
================
- Support for listing, adding, attaching, detaching and removing block volumes
- Progress bar added for file copy local to remote and remote to local
- Support for metadata add, update and delete for images and servers
- Recursive copy of directories local to remote, remote to local and remote to remote
- Support for multiple files specified on a copy command line with some wild carding

v0.0.15 06/08/12
================
- Add an optional switch to all commands to specify availability zone
- Add a new command config to list the existing configuration settings
- Add support for AZ3 and future availability zones for all services
- Fixed account:setup issue when certain services are deactivated.
- Add an option to add a security group rule by using a source group
- Minor fixes to aliases, documentation and help.

v0.0.14 02/23/12
================
- Add examples documentation
- Update test suite and inline help documentation