@@ -52,5 +52,6 @@ require 'hpcloud/commands/keypairs'
 require 'hpcloud/commands/addresses'
 require 'hpcloud/commands/securitygroups'
 require 'hpcloud/commands/snapshots'
+require 'hpcloud/commands/tempurl'
 
 require 'hpcloud/commands/cdn_containers'
