@@ -1,17 +1,18 @@
 require File.expand_path(File.dirname(__FILE__) + '/../../spec_helper')
 
-describe 'location command' do
+describe 'tempurl command' do
 
   before(:all) do
     @hp_svc = storage_connection
-    cptr("containers:add -a secondary :someoneelses")
-    @hp_svc.put_container('location')
-    @hp_svc.put_object('location', 'tiny.txt', read_file('foo.txt'))
+    rsp = cptr("containers:add -a secondary :someoneelses")
+    rsp = cptr("containers:add :tempcontainer")
+    file = File.expand_path(File.dirname(__FILE__) + '/../../fixtures/files/foo.txt')
+    rsp = cptr("copy #{file} :tempcontainer")
   end
 
   context "run on missing container" do
     it "should show fail message" do
-      rsp = cptr('location :my_missing_container')
+      rsp = cptr('tempurl :my_missing_container/foo.txt')
 
       rsp.stderr.should eq("Cannot find container ':my_missing_container'.\n")
       rsp.stdout.should eq("")
@@ -21,19 +22,19 @@ describe 'location command' do
 
   context "run on local file" do
     it "should show fail message" do
-      rsp = cptr("location #{__FILE__}")
+      rsp = cptr("tempurl #{__FILE__}")
 
-      rsp.stderr.should eq("Not supported on local object '#{__FILE__}'.\n")
+      rsp.stderr.should eq("Temporary URLs of local objects is not supported: #{__FILE__}\n")
       rsp.stdout.should eq("")
-      rsp.exit_status.should be_exit(:not_supported)
+      rsp.exit_status.should be_exit(:incorrect_usage)
     end
   end
 
   context "run on missing object" do
     it "should show fail message" do
-      @hp_svc.put_container('empty')
+      cptr("containers:add :empty")
 
-      rsp = cptr('location :empty/file')
+      rsp = cptr('tempurl :empty/file')
 
       rsp.stderr.should eq("Cannot find object named ':empty/file'.\n")
       rsp.stdout.should eq("")
@@ -43,22 +44,12 @@ describe 'location command' do
     after(:all) { purge_container('empty') }
   end
 
-  context "run without permission for container" do
-    it "should display error message" do
-      rsp = cptr('location :someoneelses')
-
-      rsp.stderr.should eq("Cannot find container ':someoneelses'.\n")
-      rsp.stdout.should eq("")
-      rsp.exit_status.should be_exit(:not_found)
-    end
-  end
-
   context "run without permissions for object" do
     it "should display error message" do
       @file_name='spec/fixtures/files/Matryoshka/Putin/Medvedev.txt'
       cptr("copy -a secondary #{@file_name} :someoneelses")
 
-      rsp = cptr("location :someoneelses/#{@file_name}")
+      rsp = cptr("tempurl :someoneelses/#{@file_name}")
 
       rsp.stderr.should eq("Cannot find container ':someoneelses'.\n")
       rsp.stdout.should eq("")
@@ -67,30 +58,30 @@ describe 'location command' do
   end
 
   context "with avl settings from config" do
-    it "should return location" do
-      @hp_svc.put_container('location')
-
-      rsp = cptr('location :location')
+    it "should return tempurl" do
+      rsp = cptr('tempurl :tempcontainer/foo.txt')
 
       rsp.stderr.should eq("")
-      rsp.stdout.should eq("#{@hp_svc.url}/location\n")
+      rsp.stdout.should include("#{@hp_svc.url}")
+      rsp.stdout.should include("/tempcontainer/foo.txt")
       rsp.exit_status.should be_exit(:success)
     end
   end
 
-  context "location for file with valid avl" do
+  context "tempurl for file with valid avl" do
     it "should report success" do
-      rsp = cptr('location :location/tiny.txt -z region-a.geo-1')
+      rsp = cptr('tempurl :tempcontainer/foo.txt -z region-a.geo-1')
 
       rsp.stderr.should eq("")
-      rsp.stdout.should eq("#{@hp_svc.url}/location/tiny.txt\n")
+      rsp.stdout.should include("#{@hp_svc.url}")
+      rsp.stdout.should include("/tempcontainer/foo.txt")
       rsp.exit_status.should be_exit(:success)
     end
   end
 
-  context "location for file with invalid avl" do
+  context "tempurl for file with invalid avl" do
     it "should report error" do
-      rsp = cptr('location :location/tiny.txt -z blah')
+      rsp = cptr('tempurl :tempcontainer/foo.txt -z blah')
 
       rsp.stderr.should include("Please check your HP Cloud Services account to make sure the 'Storage' service is activated for the appropriate availability zone.\n")
       rsp.stdout.should eq("")
@@ -103,7 +94,7 @@ describe 'location command' do
     it "should report error" do
       AccountsHelper.use_tmp()
 
-      rsp = cptr("location :location/tiny.txt -a bogus")
+      rsp = cptr("tempurl :tempcontainer/foo.txt -a bogus")
 
       tmpdir = AccountsHelper.tmp_dir()
       rsp.stderr.should eq("Could not find account file: #{tmpdir}/.hpcloud/accounts/bogus\n")
@@ -113,5 +104,5 @@ describe 'location command' do
     after(:all) {reset_all()}
   end
 
-  after(:all) { purge_container('location') }
+  after(:all) { purge_container('tempcontainer') }
 end
